feat: Refactor login page

--- a/Knoex/wwwroot/css/style.css
+++ b/Knoex/wwwroot/css/style.css
@@ -348,6 +348,7 @@ input:where([type='button']),
 input:where([type='reset']),
 input:where([type='submit']) {
   -webkit-appearance: button;
+  appearance: button;
   /* 1 */
   background-color: transparent;
   /* 2 */
