--- a/Knoex/Views/Authentication/Login.cshtml
+++ b/Knoex/Views/Authentication/Login.cshtml
@@ -3,47 +3,72 @@
     Layout = "_EmptyLayout";
     ViewData["Title"] = "Login";
 }
-<div>
-    <div>
-        <div>
-            <div>
-                <img src="~/img/knoex-logo.svg" alt="Knoex Logo">
-                <h2>Sign in to your account</h2>
+<div class="w-full min-h-screen flex">
+    <div class="flex items-center justify-center w-full sm:w-1/3">
+        <div class="max-w-md w-full">
+            <div class="mb-8 flex items-center"> @* Add flex container *@
+                <img src="~/img/knoex-logo.svg" alt="Knoex Logo" class="w-10 h-auto mr-4"> @* Add margin-right *@
+                <h2 class="text-3xl font-extrabold text-gray-900"> @* Removed extra classes, adjusted as needed *@
+                    Sign in to your account
+                </h2>
             </div>
             @if (Model.LoginFailed)
             {
-                <div>
+                <div class="flex w-full py-2 px-4 mb-4 text-red-800 bg-red-100 rounded-md">
                     <img src="~/img/knoex-logo.svg" alt="Knoex Logo" style="width: 50px; height: auto;" />
+
                     The username or password is incorrect
                 </div>
             }
             <form action="/login" method="post">
                 @Html.AntiForgeryToken()
                 <input type="hidden" name="returnUrl" value="@Model.ReturnUrl">
-                <div>
+                <div class="rounded-md shadow-sm">
                     <div>
-                        <input aria-label="Username" name="username" type="text" required placeholder="Username">
+                        <input aria-label="Username" name="username" type="text" required
+                            class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-t-md focus:outline-none focus:shadow-outline-indigo focus:border-indigo-300 focus:z-10 sm:text-sm sm:leading-5"
+                            placeholder="Username">
                     </div>
-                    <div>
-                        <input aria-label="Password" name="password" type="password" required placeholder="Password">
-                    </div>
-                </div>
-                <div>
-                    <div>
-                        <input id="remember" name="remember" type="checkbox">
-                        <label for="remember">Remember me</label>
-                    </div>
-                    <div>
-                        <a href="/register">Create a new account</a>
+                    <div class="-mt-px">
+                        <input aria-label="Password" name="password" type="password" required
+                            class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-b-md focus:outline-none focus:shadow-outline-indigo focus:border-indigo-300 focus:z-10 sm:text-sm sm:leading-5"
+                            placeholder="Password">
                     </div>
                 </div>
-                <div>
-                    <button type="submit">
 
+                <div class="mt-6 flex items-center justify-between">
+                    <div class="flex items-center">
+                        <input id="remember" name="remember" type="checkbox"
+                            class="form-checkbox h-4 w-4 text-indigo-600 transition duration-150 ease-in-out">
+                        <label for="remember" class="ml-2 block text-sm leading-5 text-gray-900">
+                            Remember me
+                        </label>
+                    </div>
+
+                    <div class="text-sm leading-5">
+                        <a href="/register"
+                            class="font-medium text-indigo-600 hover:text-indigo-500 focus:outline-none focus:underline transition ease-in-out duration-150">
+                            Create a new account
+                        </a>
+                    </div>
+                </div>
+
+                <div class="mt-6">
+                    <button type="submit"
+                        class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm leading-5 font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:border-indigo-700 focus:shadow-outline-indigo active:bg-indigo-700 transition duration-150 ease-in-out">
+                        <span class="absolute left-0 inset-y-0 flex items-center pl-3">
+                            <svg class="h-5 w-5 text-indigo-500 group-hover:text-indigo-400 transition ease-in-out duration-150"
+                                fill="currentColor" viewBox="0 0 20 20">
+                                <path fill-rule="evenodd"
+                                    d="M5 9V7a5 5 0 0110 0v2a2 2 0 012 2v5a2 2 0 01-2 2H5a2 2 0 01-2-2v-5a2 2 0 012-2zm8-2v2H7V7a3 3 0 016 0z"
+                                    clip-rule="evenodd" />
+                            </svg>
+                        </span>
                         Sign in
                     </button>
                 </div>
             </form>
         </div>
     </div>
+    <div class="hidden sm:block w-2/3 bg-cover bg-center" style="background-image: url('/img/spongebob.jpg');"></div>
 </div>
