--- a/Knoex/Views/Authentication/Register.cshtml
+++ b/Knoex/Views/Authentication/Register.cshtml
@@ -2,53 +2,87 @@
     Layout = "_EmptyLayout";
     ViewData["Title"] = "Register";
 }
-<div>
-    <div>
-        <div>
-            <img src="~/img/knoex-logo.svg" alt="Knoex Logo">
-            <h2>Create your Knowex account</h2>
+<div class="w-full min-h-screen flex">
+    <div class="flex items-center justify-center w-full sm:w-1/3">
+        <div class="max-w-md w-full">
             <div>
-                <a href="/login">I already have an account</a>
+                <img src="~/img/knoex-logo.svg" alt="Knoex Logo" class="w-10 h-auto">
+                <h2 class="mt-6 text-center text-3xl leading-9 font-extrabold text-gray-900">
+                    Create your Knowex account
+                </h2>
+                <div class="mt-2 text-sm text-center leading-5">
+                    <a href="/login"
+                        class="font-medium text-indigo-600 hover:text-indigo-500 focus:outline-none focus:underline transition ease-in-out duration-150">
+                        I already have a account
+                    </a>
+                </div>
             </div>
+            <form class="mt-8" action="/register" method="post">
+                @Html.AntiForgeryToken()
+                <div class="flex flex-col space-y-4">
+                    <div>
+                        <label class="mb-1 block text-sm font-medium text-gray-700" for="email">Email address</label>
+                        <input aria-label="Email address" id="email" name="email" type="email" required
+                            class="w-full px-3 py-2 border border-gray-300 text-gray-900 rounded-md focus:outline-none focus:shadow-outline-indigo focus:border-indigo-300 focus:z-10 sm:text-sm sm:leading-5">
+                    </div>
+
+                    <div class="flex space-x-2">
+                        <div>
+                            <label class="mb-1 block text-sm font-medium text-gray-700"
+                                for="first_name">Firstname</label>
+                            <input aria-label="Firstname" id="first_name" name="first_name" type="text" required
+                                class="w-full px-3 py-2 border border-gray-300 text-gray-900 rounded-md focus:outline-none focus:shadow-outline-indigo focus:border-indigo-300 sm:text-sm sm:leading-5">
+                        </div>
+                        <div>
+                            <label class="mb-1 block text-sm font-medium text-gray-700" for="last_name">Lastname</label>
+                            <input aria-label="Lastname" id="last_name" name="last_name" type="text" required
+                                class="w-full px-3 py-2 border border-gray-300 text-gray-900 rounded-md focus:outline-none focus:shadow-outline-indigo focus:border-indigo-300 sm:text-sm sm:leading-5">
+                        </div>
+                    </div>
+
+                    <div>
+                        <label class="mb-1 block text-sm font-medium text-gray-700" for="username">Username</label>
+                        <input aria-label="Username" id="username" name="username" type="text" required
+                            class="w-full px-3 py-2 border border-gray-300 text-gray-900 rounded-md focus:outline-none focus:shadow-outline-indigo focus:border-indigo-300 sm:text-sm sm:leading-5">
+                    </div>
+
+                    <div x-data="{ open: false }">
+                        <label class="mb-1 block text-sm font-medium text-gray-700" for="password">Password</label>
+                        <div class="mt-1 flex rounded-md shadow-sm">
+                            <span x-on:click="open = ! open"
+                                class="inline-flex items-center px-3 rounded-l-md border border-r-0 border-gray-300 bg-gray-50 text-gray-500 text-sm font-black cursor-pointer">
+                                ? </span>
+                            <input type="password" name="password" id="password"
+                                class="focus:border-indigo-300 text-gray-900 flex-1 block w-full rounded-none rounded-r-md sm:text-sm border-gray-300">
+                        </div>
+                        <ul role="list" class="mt-2 pl-4 list-disc text-sm space-y-1" x-show="open" x-cloak>
+                            <li class="text-gray-400">
+                                <span class="text-gray-600">Minimal 6 characters long</span>
+                            </li>
+                            <li class="text-gray-400">
+                                <span class="text-gray-600">Minimal 1 digit required</span>
+                            </li>
+                            <li class="text-gray-400">
+                                <span class="text-gray-600">Minimal 1 lowercase character required</span>
+                            </li>
+                            <li class="text-gray-400">
+                                <span class="text-gray-600">Minimal 1 uppercase character required</span>
+                            </li>
+                            <li class="text-gray-400">
+                                <span class="text-gray-600">Minimal 1 non-alphanumeric character required</span>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="mt-6">
+                    <button type="submit"
+                        class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm leading-5 font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-500 focus:outline-none focus:border-indigo-700 focus:shadow-outline-indigo active:bg-indigo-700 transition duration-150 ease-in-out">
+                        Register
+                    </button>
+                </div>
+            </form>
         </div>
-        <form action="/register" method="post">
-            @Html.AntiForgeryToken()
-            <div>
-                <div>
-                    <label for="email">Email address</label>
-                    <input id="email" name="email" type="email" required>
-                </div>
-
-                <div>
-                    <label for="first_name">Firstname</label>
-                    <input id="first_name" name="first_name" type="text" required>
-                </div>
-                <div>
-                    <label for="last_name">Lastname</label>
-                    <input id="last_name" name="last_name" type="text" required>
-                </div>
-
-                <div>
-                    <label for="username">Username</label>
-                    <input id="username" name="username" type="text" required>
-                </div>
-
-                <div>
-                    <label for="password">Password</label>
-                    <input type="password" name="password" id="password">
-                    <ul>
-                        <li>Minimal 6 characters long</li>
-                        <li>Minimal 1 digit required</li>
-                        <li>Minimal 1 lowercase character required</li>
-                        <li>Minimal 1 uppercase character required</li>
-                        <li>Minimal 1 non-alphanumeric character required</li>
-                    </ul>
-                </div>
-            </div>
-
-            <div>
-                <button type="submit">Register</button>
-            </div>
-        </form>
     </div>
+    <div class="hidden sm:block w-2/3 bg-cover bg-center" style="background-image: url('/img/spongebob.jpg');"></div>
 </div>
