feat: fix register form, update ui

--- a/Knoex/Views/Authentication/Register.cshtml
+++ b/Knoex/Views/Authentication/Register.cshtml
@@ -13,7 +13,7 @@
                 <div class="mt-2 text-sm text-center leading-5">
                     <a href="/login"
                         class="font-medium text-indigo-600 hover:text-indigo-500 focus:outline-none focus:underline transition ease-in-out duration-150">
-                        I already have a account
+                        I already have an account
                     </a>
                 </div>
             </div>
@@ -29,13 +29,13 @@
                     <div class="flex space-x-2">
                         <div>
                             <label class="mb-1 block text-sm font-medium text-gray-700"
-                                for="first_name">Firstname</label>
-                            <input aria-label="Firstname" id="first_name" name="first_name" type="text" required
+                                for="firstName">Firstname</label>
+                            <input aria-label="Firstname" id="firstName" name="firstName" type="text" required
                                 class="w-full px-3 py-2 border border-gray-300 text-gray-900 rounded-md focus:outline-none focus:shadow-outline-indigo focus:border-indigo-300 sm:text-sm sm:leading-5">
                         </div>
                         <div>
-                            <label class="mb-1 block text-sm font-medium text-gray-700" for="last_name">Lastname</label>
-                            <input aria-label="Lastname" id="last_name" name="last_name" type="text" required
+                            <label class="mb-1 block text-sm font-medium text-gray-700" for="lastName">Lastname</label>
+                            <input aria-label="Lastname" id="lastName" name="lastName" type="text" required
                                 class="w-full px-3 py-2 border border-gray-300 text-gray-900 rounded-md focus:outline-none focus:shadow-outline-indigo focus:border-indigo-300 sm:text-sm sm:leading-5">
                         </div>
                     </div>
