--- a/Knoex/Views/Home/Index.cshtml
+++ b/Knoex/Views/Home/Index.cshtml
@@ -1,25 +1,7 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "New questions";
 }
 
 <div class="container mx-auto p-4">
     <h1 class="text-3xl font-bold text-center mb-4">Welcome</h1>
-    <p class="text-lg text-gray-700 text-center">
-        Learn about <a href="https://docs.microsoft.com/aspnet/core" class="text-blue-500 hover:underline">building Web
-            apps with ASP.NET Core</a>.
-    </p>
-
-    <div class="mt-8"> @* Example of additional content with styling *@
-        <button class="bg-blue-500 hover:bg-blue-700 font-bold py-2 px-4 rounded">
-            HOHOHOHO
-        </button>
-    </div>
-
-
-    <div class="mt-8 bg-gray-100 p-4 rounded-lg shadow-md"> @* Example of styled section *@
-        <h2 class="text-2xl font-semibold mb-2">More Information</h2>
-        <p>This is another section with some styled content.</p>
-    </div>
-
-
 </div>
