--- a/Knoex/Views/Shared/_Menu.cshtml
+++ b/Knoex/Views/Shared/_Menu.cshtml
@@ -1,4 +1,4 @@
-<nav class="bg-gray-800" x-data="{ menu: false, profile: false }">
+<nav class="bg-gray-800" x-data="{ menu: false, profile: false, settings: false }">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="flex items-center justify-between h-16">
             <div class="flex items-center">
@@ -28,7 +28,7 @@
                     <input type="text" placeholder="Search..." class="p-0 border-0 bg-transparent focus:outline-none">
                 </div>
                 <!-- Profile dropdown -->
-                @if (User?.Identity?.IsAuthenticated == true)
+                @if (User?.Identity?.IsAuthenticated == true && ViewBag.CurrentUser != null)
                 {
                     <div class="hidden lg:block ml-3 relative">
                         <div>
@@ -36,15 +36,14 @@
                                 class="max-w-xs bg-gray-800 rounded-full flex items-center text-sm focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white"
                                 id="user-menu-button" aria-expanded="false" aria-haspopup="true">
                                 <span class="sr-only">Open user menu</span>
-                                <img class="h-8 w-8 rounded-full" src="" alt="avatar">
+                                <img class="h-8 w-8 rounded-full" src="@ViewBag.CurrentUser.Avatar()" alt="avatar">
                             </button>
                         </div>
                         <div x-cloak x-show="profile" x-on:click.away="profile = false"
                             class="origin-top-right absolute right-0 mt-2 w-48 rounded-md shadow-lg py-1 bg-white ring-1 ring-black ring-opacity-5 focus:outline-none"
                             role="menu" aria-orientation="vertical" aria-labelledby="user-menu-button" tabindex="-1">
-                            <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1"
-                                id="user-menu-item-0">Your Profile</a>
-                            <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1"
+                            <a href="#" x-on:click="settings = true; profile = false"
+                                class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1"
                                 id="user-menu-item-1">Settings</a>
                             <a href="/logout" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1"
                                 id="user-menu-item-2">Sign out</a>
@@ -101,13 +100,15 @@
             {
                 <div class="flex items-center px-5">
                     <div class="flex-shrink-0">
-                        <img class="h-10 w-10 rounded-full"
-                            src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"
-                            alt="">
+                        <img class="h-10 w-10 rounded-full" src="@ViewBag.CurrentUser.Avatar()" alt="Avatar">
+
                     </div>
                     <div class="ml-3">
-                        <div class="text-base font-medium leading-none text-white">Tom Cook</div>
-                        <div class="text-sm font-medium leading-none text-gray-400">tom@example.com</div>
+                        <div class="text-base font-medium leading-none text-white">
+                            @ViewBag.CurrentUser.FirstName
+                            @ViewBag.CurrentUser.LastName
+                        </div>
+                        <div class="text-sm font-medium leading-none text-gray-400">@ViewBag.CurrentUser.Email</div>
                     </div>
                     <button type="button"
                         class="ml-auto bg-gray-800 flex-shrink-0 p-1 rounded-full text-gray-400 hover:text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white">
