feat: Implement user settings + profile update

--- a/Knoex/Views/Shared/_Menu.cshtml
+++ b/Knoex/Views/Shared/_Menu.cshtml
@@ -143,4 +143,8 @@
             }
         </div>
     </div>
+    @if (User.Identity.IsAuthenticated && ViewBag.CurrentUser != null)
+    {
+        <partial name="_Settings" />
+    }
 </nav>
