feat: implemnt ui for settings, notifications, modal

--- a/Knoex/Views/Shared/_Menu.cshtml
+++ b/Knoex/Views/Shared/_Menu.cshtml
@@ -143,7 +143,7 @@
             }
         </div>
     </div>
-    @if (User.Identity.IsAuthenticated && ViewBag.CurrentUser != null)
+    @if ((User?.Identity?.IsAuthenticated ?? false) && ViewBag.CurrentUser != null)
     {
         <partial name="_Settings" />
     }
