--- a/Knoex/Views/Shared/_Modal.cshtml
+++ b/Knoex/Views/Shared/_Modal.cshtml
@@ -1,21 +1,26 @@
 <template x-teleport="#modal">
-    <div class="relative z-10" aria-labelledby="modal-title" role="dialog" aria-modal="true"
-        x-show='@ViewData["ModalStateName"]' x-cloak>
-        <div class="fixed inset-0 bg-gray-500 bg-opacity-75 transition-opacity"></div>
-        <div class="fixed z-10 inset-0 overflow-y-auto">
-            <div class="flex items-end sm:items-center justify-center min-h-full p-4 text-center sm:p-0">
-                <div
-                    class="relative bg-white rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:max-w-lg sm:w-full">
-                    <div class="bg-white px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
+    <div x-show="@ViewData["ModalStateName"]" x-trap="@ViewData["ModalStateName"]" x-cloak aria-labelledby="modal-title"
+        role="dialog" aria-modal="true">
+        <div class="fixed inset-0 bg-gray-500/75"></div>
+
+        <div class="fixed inset-0 flex items-center justify-center p-4 sm:p-0">
+            <div class="relative bg-white rounded-lg shadow-xl max-w-lg w-full">
+                <form action="@ViewData["ModalFormAction"]" method="post">
+                    @Html.AntiForgeryToken()
+                    <div class="p-4 sm:p-6">
                         @RenderBody()
                     </div>
-                    <div class="bg-gray-50 px-4 py-3 sm:px-6 sm:flex sm:flex-row-reverse">
-                        <button type="button"
-                            class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 text-base font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:border-indigo-700 focus:shadow-outline-indigo active:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-700 sm:ml-3 sm:w-auto sm:text-sm">@ViewData["ModalButton"]</button>
-                        <button type="button" x-on:click='@ViewData["ModalStateName"] = false'
-                            class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">Cancel</button>
+                    <div class="bg-gray-50 px-4 py-3 sm:px-6 flex flex-row-reverse">
+                        <button type="submit"
+                            class="ml-3 inline-flex rounded-md shadow-sm px-4 py-2 text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:ring focus:ring-indigo-200">
+                            @ViewData["ModalButton"]
+                        </button>
+                        <button type="button" x-on:click="@ViewData["ModalStateName"] = false"
+                            class="inline-flex rounded-md border border-gray-300 shadow-sm px-4 py-2 text-sm font-medium text-gray-700 bg-white hover:bg-gray-50 focus:ring focus:ring-indigo-200">
+                            Cancel
+                        </button>
                     </div>
-                </div>
+                </form>
             </div>
         </div>
     </div>
