--- a/Knoex/Views/Shared/_Notifications.cshtml
+++ b/Knoex/Views/Shared/_Notifications.cshtml
@@ -1,30 +1,38 @@
-<div>
+<div class="fixed bottom-0 right-0 p-3 sm:p-10 z-10">
     @foreach (var notification in ViewBag.Notifications)
     {
-        <div x-cloak x-data="{show: false}" x-show="show"
-            x-init="setTimeout(() => show = true, 100); setTimeout(() => show = false, 5000)">
-
-            @if (@notification.Split("||")[0] == "success")
-            {
-                <div>
-                    <p>
-                        Success
+        <div x-data="{ show: false }" x-show="show"
+            x-init="setTimeout(() => show = true, 100); setTimeout(() => show = false, 5000)"
+            class="relative w-full sm:w-96 p-4 mb-6 rounded bg-white border border-gray-200 shadow-lg">
+            <div class="flex">
+                <div
+                    class="shrink-0 w-10 h-10 rounded-full flex items-center justify-center @(notification.Split("||")[0] == "success" ? "bg-green-100" : "bg-red-100")">
+                    @if (notification.Split("||")[0] == "success")
+                    {
+                        <svg class="h-6 w-6 text-green-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+                        </svg>
+                    }
+                    else
+                    {
+                        <svg class="h-6 w-6 text-red-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z" />
+                        </svg>
+                    }
+                </div>
+                <div class="ml-4 w-full">
+                    @notification.Split("||")[1]
+                    <p class="text-sm text-gray-400">
+                        @notification.Split("||")[2]
                     </p>
                 </div>
-            }
-            else
-            {
-                <div>
-                    <p>
-                        Failed
-                    </p>
-                </div>
-            }
-            <div>
-                @notification.Split("||")[1]
-                <p>
-                    @notification.Split("||")[2]
-                </p>
+                <button class="ml-auto shrink-0 text-gray-400 hover:text-gray-600" x-on:click="show = false">
+                    <svg class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
+                    </svg>
+                </button>
             </div>
         </div>
     }
