--- a/Knoex/Views/Shared/_Settings.cshtml
+++ b/Knoex/Views/Shared/_Settings.cshtml
@@ -5,26 +5,63 @@
     ViewData["ModalFormAction"] = "/settings";
 }
 
-<input type="hidden" name="url" value="@Context.Request.Path" />
+<div class="flex flex-col">
+    <input type="hidden" name="url" value="@Context.Request.Path" />
+    <div class="flex mb-3">
+        <img class="h-24 w-24 rounded-full" src="@ViewBag.CurrentUser.Avatar()" alt="avatar">
 
-<h1>Profile settings</h1>
-<p>
-    Change profile picture on
-    <a href="https://gravatar.com" target="_blank">Gravatar</a>.
-</p>
-<img src="@ViewBag.CurrentUser.Avatar()" alt="avatar">
+        <div class="grow px-6">
+            <h1 class="text-xl font-bold text-gray-900">Profile settings</h1>
+            <p class="mt-1 text-sm text-gray-700">
+                Change profile picture on
+                <a href="https://gravatar.com" target="_blank" class="underline">Gravatar</a>.
+            </p>
+        </div>
+    </div>
 
-<label for="email">Email</label>
-<input id="email" name="email" type="email" value="@ViewBag.CurrentUser.Email" required>
+    <div class="flex flex-col space-y-4">
+        <div>
+            <label class="block text-sm font-medium text-gray-700 mb-1" for="email">Email address</label>
+            <input type="email" id="email" name="email" value="@ViewBag.CurrentUser.Email" required
+                class="w-full px-3 py-2 border border-gray-300 rounded-md focus:ring focus:ring-indigo-200">
+        </div>
 
-<label for="first_name">Firstname</label>
-<input id="first_name" name="first_name" type="text" value="@ViewBag.CurrentUser.FirstName" required>
+        <div class="flex space-x-2">
+            <div class="grow"> @* Added grow *@
+                <label class="block text-sm font-medium text-gray-700 mb-1" for="firstName">Firstname</label>
+                <input type="text" id="firstName" name="firstName" value="@ViewBag.CurrentUser.FirstName" required
+                    class="w-full px-3 py-2 border border-gray-300 rounded-md focus:ring focus:ring-indigo-200">
+            </div>
+            <div class="grow"> @* Added grow *@
+                <label class="block text-sm font-medium text-gray-700 mb-1" for="lastName">Lastname</label>
+                <input type="text" id="lastName" name="lastName" value="@ViewBag.CurrentUser.LastName" required
+                    class="w-full px-3 py-2 border border-gray-300 rounded-md focus:ring focus:ring-indigo-200">
+            </div>
+        </div>
 
-<label for="last_name">Lastname</label>
-<input id="last_name" name="last_name" type="text" value="@ViewBag.CurrentUser.LastName" required>
+        <div x-data="{ open: false }">
+            <label class="block text-sm font-medium text-gray-700 mb-1" for="password">
+                New password <span class="font-normal text-gray-500">(Optional)</span>
+            </label>
+            <div class="flex rounded-md"> @* Removed shadow-sm *@
+                <span x-on:click="open = !open"
+                    class="inline-flex items-center px-3 rounded-l-md border border-r-0 border-gray-300 bg-gray-50 text-gray-500 font-black cursor-pointer">?</span>
+                <input type="password" name="newPassword" id="password"
+                    class="w-full px-3 py-2 border border-gray-300 rounded-r-md focus:ring focus:ring-indigo-200">
+            </div>
+            <ul class="mt-2 pl-4 list-disc text-sm space-y-1" x-show="open" x-cloak>
+                <li class="text-gray-500"><span class="text-gray-700">Minimal 6 characters long</span></li>
+                <li class="text-gray-500"><span class="text-gray-700">Minimal 1 digit</span></li>
+                <li class="text-gray-500"><span class="text-gray-700">Minimal 1 lowercase character</span></li>
+                <li class="text-gray-500"><span class="text-gray-700">Minimal 1 uppercase character</span></li>
+                <li class="text-gray-500"><span class="text-gray-700">Minimal 1 non-alphanumeric character</span></li>
+            </ul>
+        </div>
 
-<label for="password">New password</label>
-<input type="password" name="new_password" id="password">
-
-<label for="password">Current password</label>
-<input id="password" name="current_password" type="password" required>
+        <div>
+            <label class="block text-sm font-medium text-gray-700 mb-1" for="password">Current password</label>
+            <input type="password" name="currentPassword" id="password" required
+                class="w-full px-3 py-2 border border-gray-300 rounded-md focus:ring focus:ring-indigo-200">
+        </div>
+    </div>
+</div>
