feat: add post partial and pagination

--- a/Knoex/Views/Authentication/Register.cshtml
+++ b/Knoex/Views/Authentication/Register.cshtml
@@ -8,7 +8,7 @@
             <div>
                 <img src="~/img/knoex-logo.svg" alt="Knoex Logo" class="w-10 h-auto">
                 <h2 class="mt-6 text-center text-3xl leading-9 font-extrabold text-gray-900">
-                    Create your Knowex account
+                    Create your Knoex account
                 </h2>
                 <div class="mt-2 text-sm text-center leading-5">
                     <a href="/login"
