feat: Refactor models and view models (with base model/viewmodel for metadata)

--- a/Knoex/Views/Shared/Post/_SinglePost.cshtml
+++ b/Knoex/Views/Shared/Post/_SinglePost.cshtml
@@ -55,7 +55,7 @@
             </div>
         </div>
         <div class="md:w-full md:mt-2 text-center text-xs text-gray-400">
-            @Model.Post.CreatedAt.ToLocalTime().ToString("dd-MM-yyyy HH:mm")
+            @Model.Timestamp
         </div>
     </div>
 </div>
