--- a/Knoex/Views/Post/Post.cshtml
+++ b/Knoex/Views/Post/Post.cshtml
@@ -4,10 +4,11 @@
 }
 <div class="flex space-x-6 mt-6">
     <div class="flex flex-col space-y-6 w-9/12">
-        <partial name="Post/_SinglePostDetail" model="new Knoex.ViewModels.PostViewModel{ Post = Model.Post }" />
-        @foreach (Post answers in Model.Post.Answers)
+        <partial name="Post/_SinglePostDetail" model="Model" />
+        @foreach (Post ans in Model.Post.Answers)
         {
-            <partial name="Post/_SinglePostDetail" model="new Knoex.ViewModels.PostViewModel{ Post = answers }" />
+            <partial name="Post/_SinglePostDetail"
+                model="new Knoex.ViewModels.PostViewModel{ Post = ans, GivenVotes = Model.GivenVotes }" />
         }
         @if (User.Identity.IsAuthenticated)
         {
