--- a/Knoex/Views/Shared/Post/_SinglePost.cshtml
+++ b/Knoex/Views/Shared/Post/_SinglePost.cshtml
@@ -3,15 +3,15 @@
 <div class="flex flex-col md:flex-row md:space-x-6 w-full px-8 py-6">
     <div class="flex md:flex-col justify-between flex-shrink-0 w-24 mb-2 md:m-0 text-xs text-gray-400">
         <div class="flex items-end mr-3 md:m-0">
-            <span class="md:-mb-1 mr-1 text-gray-900 md:text-lg">12</span>
+            <span class="md:-mb-1 mr-1 text-gray-900 md:text-lg">@Model.Post.VoteScore</span>
             votes
         </div>
         <div class="flex items-end mr-3 md:m-0">
-            <span class="md:-mb-1 mr-1 text-gray-900 md:text-lg">2</span>
-            anwsers
+            <span class="md:-mb-1 mr-1 text-gray-900 md:text-lg">@Model.Post.AnswersCount</span>
+            answers
         </div>
         <div class="flex items-end">
-            <span class="md:-mb-1 mr-1 text-gray-900 md:text-lg">25212</span>
+            <span class="md:-mb-1 mr-1 text-gray-900 md:text-lg">@Model.Post.ViewCount</span>
             views
         </div>
     </div>
@@ -43,7 +43,7 @@
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                         d="M7 8h10M7 12h4m1 8l-4-4H5a2 2 0 01-2-2V6a2 2 0 012-2h14a2 2 0 012 2v8a2 2 0 01-2 2h-3l-4 4z" />
                 </svg>
-                <span class="mx-1">33</span>
+                <span class="mx-1">@Model.Post.User.QuestionCount</span>
             </div>
             <div class="flex space-x-1 text-center ">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-gray-400" fill="none" viewBox="0 0 24 24"
@@ -51,7 +51,7 @@
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                         d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
                 </svg>
-                <span class="mx-1">333</span>
+                <span class="mx-1">@Model.Post.User.AcceptedAnswerCount</span>
             </div>
         </div>
         <div class="md:w-full md:mt-2 text-center text-xs text-gray-400">
