--- a/Knoex/Views/Shared/Post/_SinglePostDetail.cshtml
+++ b/Knoex/Views/Shared/Post/_SinglePostDetail.cshtml
@@ -1,23 +1,37 @@
 @model Knoex.ViewModels.PostViewModel
-<div class="flex w-full p-6 bg-white rounded shadow">
+<div class="flex w-full p-6 bg-white rounded shadow
+@(Model.Post.Parent != null && Model.Post.Parent.AcceptedAnswerId == Model.Post.Id ? "bg-green-100 border border-green-600" : "bg-white")"">
     <div class="flex flex-col w-1/12 pr-4"
         x-data="{data : {score: @Model.Post.VoteScore, vote: @Model.GetGivenVote()}}">
         <button class="text-2xl text-gray-400" :class="{ 'text-indigo-400': data.vote == 1 }"
             x-on:click="fetch('/questions/@Model.Post.Id/vote/1').then(r => r.json()).then(json => data = json)"            @* This button will be disabled if the user is not authenticated *@
-            @(!User.Identity.IsAuthenticated ? "disabled=disabled" : "")>
+    @(!User.Identity.IsAuthenticated ? "disabled=disabled" : "")>
             &#9650;
         </button>
         <p class="text-center text-lg text-gray-500" x-text="data.score">
         </p>
         <button class="text-2xl text-gray-400" :class="{ 'text-indigo-400': data.vote == 2 }"
             x-on:click="fetch('/questions/@Model.Post.Id/vote/2').then(r => r.json()).then(json => data = json)"
-            @(!User.Identity.IsAuthenticated ? "disabled=disabled" : "")>
+    @(!User.Identity.IsAuthenticated ? "disabled=disabled" : "")>
             &#9660;
         </button>
+        @if (Model.Post.Parent != null
+        && User.Identity.IsAuthenticated
+        && ViewBag.CurrentUser.Id == Model.Post.Parent.User.Id)
+        {
+            <form method="post" action="/questions/@Model.Post.Parent.Id/accept/@Model.Post.Id" class="flex justify-around mt-4">
+                @Html.AntiForgeryToken()
+                <button type="submit" class="flex items-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 text-gray-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+                    </svg>
+                </button>
+            </form>
+        }
     </div>
     <div class="w-11/12">
         <div class="w-full markdown-body">
-            @Html.Raw(Model.GetMarkdownHtml())
+        @Html.Raw(Model.GetMarkdownHtml())
         </div>
         <div class="flexw-full mt-6 border-t border-gray-300">
             <div class="flex justify-between w-full mt-2">
@@ -27,7 +41,7 @@
                 <div class="flex">
                     <div class="mr-6 mt-1">
                         <p>
-                            @Model.Post.User.FirstName @Model.Post.User.LastName
+                        @Model.Post.User.FirstName @Model.Post.User.LastName
                         </p>
                         <div class="flex flex-grow-0 text-right space-x-2 mt-1">
                             <div class="flex flex-grow-0 space-x-1 text-center">
@@ -53,38 +67,38 @@
             </div>
         </div>
         <div class="flex flex-col w-full mt-2 text-sm divide-y">
-            @foreach (Comment comment in @Model.Post.Comments)
-            {
-                <div class="py-2">
-                    <p>
-                        @comment.Body
-                    </p>
-                    <div class="inline-block mt-1 px-3 rounded-full text-xs text-gray-500 bg-gray-100">
-                        @comment.User.FirstName @comment.User.LastName &middot; @Model.GetTimestamp(comment.CreatedAt)
-                    </div>
-                </div>
-            }
-            @if (User.Identity.IsAuthenticated)
-            {
-                <div class="py-2" x-data="{ react: false }">
-                    <button x-on:click="react = true" x-show="!react">Add a comment</button>
-                    <form action="/questions/@Model.Post.Id/comments" method="POST" x-cloak x-show="react">
-                        @Html.AntiForgeryToken()
-                        <textarea name="body" rows="3"
-                            class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 mt-1 block w-full sm:text-sm border border-gray-300 rounded-md"></textarea>
-                        <div class="w-full mt-2 text-right">
-                            <button type="button" x-on:click="react = false"
-                                class="inline-flex justify-center py-1 px-2 mr-1 border border-transparent shadow-sm text-xs font-medium rounded-md text-gray-600 bg-gray-200 hover:bg-gray-300">
-                                Cancel
-                            </button>
-                            <button type="submit"
-                                class="inline-flex justify-center py-1 px-2 border border-transparent shadow-sm text-xs font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
-                                Post comment
-                            </button>
+        @foreach (Comment comment in @Model.Post.Comments)
+        {
+                    <div class="py-2">
+                        <p>
+                    @comment.Body
+                        </p>
+                        <div class="inline-block mt-1 px-3 rounded-full text-xs text-gray-500 bg-gray-100">
+                    @comment.User.FirstName @comment.User.LastName &middot; @Model.GetTimestamp(comment.CreatedAt)
                         </div>
-                    </form>
-                </div>
-            }
+                    </div>
+        }
+        @if (User.Identity.IsAuthenticated)
+        {
+                    <div class="py-2" x-data="{ react: false }">
+                        <button x-on:click="react = true" x-show="!react">Add a comment</button>
+                        <form action="/questions/@Model.Post.Id/comments" method="POST" x-cloak x-show="react">
+                    @Html.AntiForgeryToken()
+                            <textarea name="body" rows="3"
+                                class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 mt-1 block w-full sm:text-sm border border-gray-300 rounded-md"></textarea>
+                            <div class="w-full mt-2 text-right">
+                                <button type="button" x-on:click="react = false"
+                                    class="inline-flex justify-center py-1 px-2 mr-1 border border-transparent shadow-sm text-xs font-medium rounded-md text-gray-600 bg-gray-200 hover:bg-gray-300">
+                                    Cancel
+                                </button>
+                                <button type="submit"
+                                    class="inline-flex justify-center py-1 px-2 border border-transparent shadow-sm text-xs font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+                                    Post comment
+                                </button>
+                            </div>
+                        </form>
+                    </div>
+        }
         </div>
     </div>
 </div>
