feat: Implement search and tag functionality with pagination (unfinished)

--- a/Knoex/Views/Shared/Post/_SinglePostDetail.cshtml
+++ b/Knoex/Views/Shared/Post/_SinglePostDetail.cshtml
@@ -40,9 +40,9 @@
                 </div>
                 <div class="flex">
                     <div class="mr-6 mt-1">
-                        <p>
+                        <a href="/users/@Model.Post.User.Id" class="hover:underline">
                         @Model.Post.User.FirstName @Model.Post.User.LastName
-                        </p>
+                        </a>
                         <div class="flex flex-grow-0 text-right space-x-2 mt-1">
                             <div class="flex flex-grow-0 space-x-1 text-center">
                                 <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-gray-400" fill="none"
