--- a/Knoex/Views/Shared/Post/_SinglePost.cshtml
+++ b/Knoex/Views/Shared/Post/_SinglePost.cshtml
@@ -6,7 +6,8 @@
             <span class="md:-mb-1 mr-1 text-gray-900 md:text-lg">@Model.Post.VoteScore</span>
             votes
         </div>
-        <div class="flex items-end mr-3 md:m-0 @(Model.Post.AcceptedAnswerId != null ? "font-medium text-green-600" : "")">
+        <div
+            class="flex items-end mr-3 md:m-0 @(Model.Post.AcceptedAnswerId != null ? "font-medium text-green-600" : "")">
             <span class="md:-mb-1 mr-1 text-gray-900 md:text-lg">@Model.Post.AnswersCount</span>
             answers
         </div>
@@ -25,17 +26,18 @@
         <div class="flex mt-2">
             @foreach (Tag tag in @Model.Post.Tags)
             {
-                    <div class="mr-1 px-3 border rounded-full">
+                <a href="/search?q=@tag.Name"
+                    class="mr-1 px-3 border rounded-full bg-white hover:bg-indigo-700 hover:text-white">
                     @tag.Name
-                    </div>
+                </a>
             }
         </div>
     </div>
     <div class="flex flex-row md:flex-col flex-shrink-0 flex-grow-0 md:w-32 mt-3 md:m-0 text-sm">
         <img class="hidden md:block h-12 w-12 mx-auto rounded-full" src="@Model.Post.User.Avatar()" alt="Avatar">
-        <div class="hidden md:block w-full md:my-2 text-center text-gray-500">
+        <a href="/users/@Model.Post.User.Id" class="hidden md:block w-full md:my-2 text-center text-gray-500">
             @Model.Post.User.FirstName
-        </div>
+        </a>
         <div class="hidden md:flex flex-grow-0 md:mx-auto space-x-2">
             <div class="flex flex-grow-0 space-x-1 text-center">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-gray-400" fill="none" viewBox="0 0 24 24"
