feat: Add related posts functionality and unit tests

--- a/Knoex/Views/Post/Post.cshtml
+++ b/Knoex/Views/Post/Post.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = Model.Post.Title;
 }
 <div class="flex space-x-6 mt-6">
-    <div class="flex flex-col space-y-6 w-9/12">
+    <div class="w-full flex flex-col space-y-6 w-9/12">
         <partial name="Post/_SinglePostDetail" model="Model" />
         @foreach (Post ans in Model.Post.Answers)
         {
@@ -41,9 +41,26 @@
                 </div>
             }
         </div>
-        <h2 class="text-lg text-indigo-800">
-            Related
-        </h2>
+        @if (Model.RelatedPosts.Count > 0)
+        {
+            <h2 class="text-lg text-indigo-800">
+                Related
+            </h2>
+            <div class="flex flex-col mt-2 mb-5">
+                @foreach (Post post in Model.RelatedPosts)
+                {
+                    <div class="flex items-start mb-1">
+                        <p
+                            class="shrink-0 w-10 mr-2 text-center text-sm text-gray-70 rounded @(post.AcceptedAnswerId != null ? "bg-green-100" : "bg-white")">
+                            @post.VoteScore
+                        </p>
+                        <a href="/questions/@post.Id" class="hover:underline">
+                            @post.Title
+                        </a>
+                    </div>
+                }
+            </div>
+        }
     </div>
 </div>
 @section scripts {
