--- a/Knoex/Views/Shared/Post/_SinglePostDetail.cshtml
+++ b/Knoex/Views/Shared/Post/_SinglePostDetail.cshtml
@@ -1,7 +1,7 @@
 @model Knoex.ViewModels.PostViewModel
 <div class="flex w-full p-6 bg-white rounded shadow
 @(Model.Post.Parent != null && Model.Post.Parent.AcceptedAnswerId == Model.Post.Id ? "bg-green-100 border border-green-600" : "bg-white")"">
-    <div class="flex flex-col w-1/12 pr-4"
+    <div class="flex flex-shrink-0 flex-col w-1/12 px-3"
         x-data="{data : {score: @Model.Post.VoteScore, vote: @Model.GetGivenVote()}}">
         <button class="text-2xl text-gray-400" :class="{ 'text-indigo-400': data.vote == 1 }"
             x-on:click="fetch('/questions/@Model.Post.Id/vote/1').then(r => r.json()).then(json => data = json)"            @* This button will be disabled if the user is not authenticated *@
@@ -29,11 +29,11 @@
             </form>
         }
     </div>
-    <div class="w-11/12">
-        <div class="w-full markdown-body">
+    <div class="w-full w-11/12">
+        <div class=" flex-shrink-0 w-full markdown-body">
         @Html.Raw(Model.GetMarkdownHtml())
         </div>
-        <div class="flexw-full mt-6 border-t border-gray-300">
+        <div class=" flex-shrink-0 flexw-full mt-6 border-t border-gray-300">
             <div class="flex justify-between w-full mt-2">
                 <div class="text-sm text-gray-400">
                     Posted at: @Model.Timestamp
@@ -66,7 +66,7 @@
                 </div>
             </div>
         </div>
-        <div class="flex flex-col w-full mt-2 text-sm divide-y">
+        <div class="flex flex-col flex-shrink-0 w-full mt-2 text-sm divide-y">
         @foreach (Comment comment in @Model.Post.Comments)
         {
                     <div class="py-2">
