--- a/Knoex/wwwroot/css/style.css
+++ b/Knoex/wwwroot/css/style.css
@@ -2383,3 +2383,8 @@ select {
     width: 33.333333%;
   }
 }
+
+
+/*---------------------------------------------------------------*/
+
+/* Custom Styles */
