fix: Correct user detail viewmodel

--- a/Knoex/Views/User/Detail.cshtml
+++ b/Knoex/Views/User/Detail.cshtml
@@ -1,4 +1,4 @@
-model Knoex.ViewModels.UserDetailViewModel
+@model Knoex.ViewModels.UserDetailViewModel
 @{
     ViewData["Title"] = $"{Model.User.FirstName} {Model.User.LastName}";
 }
